--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
  <div class="account_desc">
   <ul>
   <li><a href="#">Register</a></li>
-  <li><a href="#"><%= link_to "Login",products_admin_path%></a></li>
+  <li><a href="#"><%= link_to "Login",products_login_path%></a></li>
   <li><a href="#">My Account</a></li>
   </ul>
  </div>
