--- a/app/views/products/login.html.erb
+++ b/app/views/products/login.html.erb
@@ -6,7 +6,7 @@
 
 <table align="center">
 
-<%=form_for [@admin],:url=>{:controller=>"products",:action=>"login_process"} do |i| %>
+<%=form_for [@adminst],:url=>{:controller=>"products",:action=>"login_process"} do |i| %>
 
 <tr>
 
