--- a/app/views/products/new_account.html.erb
+++ b/app/views/products/new_account.html.erb
@@ -2,7 +2,7 @@
 
 <table align="center">
 
-<%=form_for [@admin],:url=>{:controller=>"products",:action=>"new_account_process"} do |i| %>
+<%=form_for [@adminst],:url=>{:controller=>"products",:action=>"new_account_process"} do |i| %>
 
 <tr>
   <td><%= i.text_field :username,:placeholder=>"Username",:required=>true %></td>
