--- a/app/views/products/login.html.erb
+++ b/app/views/products/login.html.erb
@@ -6,11 +6,11 @@
 
 <table align="center">
 
-<%=form_for [@adminst],:url=>{:controller=>"products",:action=>"login_process"} do |i| %>
+<%=form_for [Admin.new],:url=>{:controller=>"products",:action=>"login_process"} do |i| %>
 
 <tr>
 
-  <td><%= i.text_field :username,:placeholder=>"Username",:required=>true %></td>
+  <td><%= i.text_field :name,:placeholder=>"Username",:required=>true %></td>
 
 </tr>
 
@@ -26,7 +26,7 @@
 
    <td><%= i.submit "Login"%></td>
 
-   <td><%= link_to "Create Account!",products_new_account_path%></td>
+   <td><!--%= link_to "Create Account!",products_new_account_path%--></td>
 
   </tr>
  
