--- a/app/views/products/new_account.html.erb
+++ b/app/views/products/new_account.html.erb
@@ -2,24 +2,28 @@
 
 <table align="center">
 
-<%=form_for [@adminst],:url=>{:controller=>"products",:action=>"new_account_process"} do |i| %>
+<%=form_for [@admin],:url=>{:controller=>"products",:action=>"new_account_process"} do |i| %>
 
 <tr>
-  <td><%= i.text_field :username,:placeholder=>"Username",:required=>true %></td>
+  <td><%= i.text_field :name,:placeholder=>"Username",:required=>true, "data-tooltip" => true, :class => "has-tip", :title => "Must be unique values",:id=>"name",:onkeyup=>"validateForm()" %></td>
 </tr>
 
 <tr>
-  <td><%= i.password_field :password,:placeholder=>"Password",:required=>true %></td>
+  <td><%= i.password_field :password,:placeholder=>"Password",:required=>true, input_html: { "data-tooltip" => true, :class => "has-tip", :title => "Minimum six characters" } %></td>
 </tr>
 
 <tr>
-  <td><%= i.text_field :email,:placeholder=>"E-mail",:required=>true %></td>
+  <td><%= i.password_field :confirm_password,:placeholder=>"Confirmation Password",:required=>true, "data-tooltip" => true, :class => "has-tip", :title => "Minimum six characters" %></td>
 </tr>
 
 <table align="center">
+
   <tr>
+
     <td><%= i.submit "Submit"%></td>
+
   </tr>
+
 </center>
 
 <%end%>
