--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>ProductCatalog</title>
@@ -9,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <link href="css/slider.css" rel="stylesheet" type="text/css" media="all"/>
-<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script> 
+<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
 <script type="text/javascript" src="js/startstop-slider.js"></script>
@@ -32,22 +31,16 @@
  </div>
 
  <div class="clear"></div>
- </div> 
- <div class="header_top">
- <div class="logo">
-   <a href="index.html"><img src="/assets/altiname.png" alt="" /></a>
  </div>
-
- <div class="clear"></div>
- </div>
+ 
  <div class="header_bottom">
  <div class="menu">
      <ul>
-      	<li class="active"><a href="home.html">Home</a></li>
-       	<li><a href="description.html">Product Description</a></li>
-    	<li><a href="details.html">Product Details</a></li>
-    	<li><a href="aboutus.html">AboutUs</a></li>
-    	<div class="clear"></div>
+        <li class="active"><a href="home.html">Home</a></li>
+        <li><a href="description.html">Product Description</a></li>
+        <li><a href="details.html">Product Details</a></li>
+        <li><a href="aboutus.html">AboutUs</a></li>
+        <div class="clear"></div>
      </ul>
  </div>
 
@@ -58,18 +51,18 @@
  </div>
 
  <div class="clear"></div>
- </div>	    
+ </div>
  <div class="header_slide">
- <div class="header_bottom_left">				
+ <div class="header_bottom_left">
  <div class="categories">
       <ul>
       <h3>Categories</h3>
-        
-       <% @product.each do |i|%>
-        <li>  <%=link_to i.cat_name,products_result_path(i)%></li>
-       <%end%>
+
+       <% @product.each do|i|%>
+        <li> <%=link_to i.cat_name, product_path(i) %> </li>
+      <%end%>
       </ul>
- </div>					
+ </div>
  </div>
 <%= yield %>
  <div class="main">
@@ -83,77 +76,78 @@
       <p><a href="#">See all Products</a></p>
       </div>
       <div class="clear"></div>
-      </div>
-   
+                                                 
+  </div>
+
            <div class="section group">
            <div class="grid_1_of_4 images_1_of_4">
-	   <a href="preview.html"><img src="/assets/flashlight1.JPG" alt="" /></a>
-	   <h2>Electrical & Lighting </h2>
-	   <div class="price-details">
-	   <div class="clear"></div>
-	   </div></div>
-	
+           <a href="preview.html"><img src="/assets/flashlight1.JPG" alt="" /></a>
+           <h2>Electrical & Lighting </h2>
+           <div class="price-details">
+           <div class="clear"></div>
+           </div></div>
+
                    <div class="grid_1_of_4 images_1_of_4">
-		   <a href="preview.html"><img src="/assets/Pressure Sensors & Switches.jpg" alt="" /></a>
-		   <h2>Pressure Sensors&Switches</h2>
-		   <div class="price-details">     
+                   <a href="preview.html"><img src="/assets/Pressure Sensors & Switches.jpg" alt="" /></a>
+                   <h2>Pressure Sensors&Switches</h2>
+                   <div class="price-details">
                    <div class="clear"></div>
-		   </div></div>
-	           <div class="grid_1_of_4 images_1_of_4">
-		   <a href="preview.html"><img src="/assets/pumps1.JPG" alt="" /></a>
-		   <h2>Water & Solvent Pumps</h2>
-		   <div class="price-details">   
-                
+                   </div></div>
+                   <div class="grid_1_of_4 images_1_of_4">
+                   <a href="preview.html"><img src="/assets/pumps1.JPG" alt="" /></a>
+                   <h2>Water & Solvent Pumps</h2>
+                   <div class="price-details">
+
                                 <div class="clear"></div>
-		        	</div></div>
-				<div class="grid_1_of_4 images_1_of_4">
-				<a href="preview.html"><img src="/assets/pumps2.JPG" alt="" /></a>
-			        <h2>Rotary Pumps </h2>
-				<div class="price-details">
-				<div class="clear"></div>
-				</div></div></div>
+                                </div></div>
+                                <div class="grid_1_of_4 images_1_of_4">
+                                <a href="preview.html"><img src="/assets/pumps2.JPG" alt="" /></a>
+                                <h2>Rotary Pumps </h2>
+                                <div class="price-details">
+                                <div class="clear"></div>
+                                </div></div></div>
 
 
 
                <div class="content_bottom">
-    	       <div class="heading">
-    	       <h3>Feature Products</h3>
-    	       </div>
+               <div class="heading">
+               <h3>Feature Products</h3>
+               </div>
                <div class="see">
-    	       <p><a href="#">See all Products</a></p>
-    	       </div>
-    	       <div class="clear"></div>
-    	       </div>
-	            
+               <p><a href="#">See all Products</a></p>
+               </div>
+               <div class="clear"></div>
+               </div>
+
                     <div class="section group">
-		    <div class="grid_1_of_4 images_1_of_4">
-                    <a href="preview.html"><img src="/assets/Automation & Control Gear.jpg" alt="" /></a>					
-		    <h2>ControlGear</h2>
-		    <div class="price-details">
-		    <div class="clear"></div>
-		    </div></div>
-			
+ <div class="grid_1_of_4 images_1_of_4">
+                    <a href="preview.html"><img src="/assets/Automation & Control Gear.jpg" alt="" /></a>                     
+                    <h2>ControlGear</h2>
+                    <div class="price-details">
+                    <div class="clear"></div>
+                    </div></div>
+
                          <div class="grid_1_of_4 images_1_of_4">
-	  		 <a href="preview.html"><img src="/assets/Cable Markers.jpg" alt="" /></a>
-			 <h2>Cable Markers</h2>
-			 <div class="price-details">
-			 <div class="clear"></div>
-			 </div></div>
+                         <a href="preview.html"><img src="/assets/Cable Markers.jpg" alt="" /></a>
+                         <h2>Cable Markers</h2>
+                         <div class="price-details">
+                         <div class="clear"></div>
+                         </div></div>
 
-		          	<div class="grid_1_of_4 images_1_of_4">
-                		<a href="preview.html"><img src="/assets/Digital Multi-Function Meters.jpg" alt="" /></a>
-				<h2>DigitalMultiple Meters</h2>
-				<div class="price-details">
-				<div class="clear"></div>
-				</div></div>
+                                <div class="grid_1_of_4 images_1_of_4">
+                                <a href="preview.html"><img src="/assets/Digital Multi-Function Meters.jpg" alt="" /></a>
+                                <h2>DigitalMultiple Meters</h2>
+                                <div class="price-details">
+                                <div class="clear"></div>
+                                </div></div>
 
-				      <div class="grid_1_of_4 images_1_of_4">
-				      <a href="preview.html"><img src="/assets/Fluid Control Systems.jpg" alt="" /></a>
-				      <h2>FluidControlSystem </h2>					 
-	               		      <div class="price-details">	       	     	
-				      <div class="clear"></div>
-				      </div></div>
-			
+                                      <div class="grid_1_of_4 images_1_of_4">
+                                      <a href="preview.html"><img src="/assets/Fluid Control Systems.jpg" alt="" /></a>
+                                      <h2>FluidControlSystem </h2>
+                                      <div class="price-details">
+                                      <div class="clear"></div>
+                                      </div></div>
+
              </div>
              </div>
              </div>
@@ -163,3 +157,5 @@
 
 </body>
 </html>
+                                                                    
+
