--- a/app/views/products/new_account.html.erb
+++ b/app/views/products/new_account.html.erb
@@ -1,19 +1,19 @@
-<h3><center>***CREATE NEW ACCOUNT***</center></h3>
+<h3><center>***CHANGE YOUR PASSWORD***</center></h3>
 
 <table align="center">
 
-<%=form_for [@admin],:url=>{:controller=>"products",:action=>"new_account_process"} do |i| %>
+<%=form_for [@adminst],:url=>{:controller=>"products",:action=>"new_account_process"} do |i| %>
 
 <tr>
   <td><%= i.text_field :username,:placeholder=>"Username",:required=>true %></td>
 </tr>
 
 <tr>
-  <td><%= i.password_field :password,:placeholder=>"Password",:required=>true %></td>
+  <td><%= i.password_field :oldpass,:placeholder=>"OldPassword",:required=>true %></td>
 </tr>
 
 <tr>
-  <td><%= i.text_field :email,:placeholder=>"E-mail",:required=>true %></td>
+  <td><%= i.text_field :newpass,:placeholder=>"NewPassword",:required=>true %></td>
 </tr>
 
 <table align="center">
