--- a/app/views/products/result.html.erb
+++ b/app/views/products/result.html.erb
@@ -1,8 +1,10 @@
 <!--% form_for [@product1], :url=>{:controller=>"products", :action=>"result_process"} do |i|%-->
-
-<!--%=form_for [@product1],:url=>{:controller=>"products",:action=>"result_process"} do |i| %-->
-<% i= @product1%>
+<div class="col-md-12">
+<!--%=form_for[@product1], :url=>{:controller=>"products", :action=>"result_process"} do |i| %-->
+<%@product1.each do|i|%>
  <div class="col-md-6">
 
  <%=link_to i.cat_name, products_result_path(i)%>
  </div>
+<%end%>
+</div>
