--- a/app/views/products/login.html.erb
+++ b/app/views/products/login.html.erb
@@ -1,55 +1,58 @@
-<%= link_to "Home",products_home_path%>
+<%= link_to image_tag("/assets/homebutton.jpeg",height: '45', width:'45'),products_home_path%>
 
-<div class="top">
+<div style="height: 240px; width: 400px; border-radius: 20px; box-shadow: 10px 10px 5px; background-color: white; margin-left: 325px;" id="shadow">
 
-<h3><center>***LOGIN NOW***</center></h3>
+<!DOCTYPE html>
 
-<table align="center">
+<html lang="en">
 
-<<<<<<< HEAD
-<%=form_for [@adminst],:url=>{:controller=>"products",:action=>"login_process"} do |i| %>
-=======
-<%=form_for [Admin.new],:url=>{:controller=>"products",:action=>"login_process"} do |i| %>
->>>>>>> 6d2f4899fc872e93c63abe34e7775b8eff401381
+<head>
 
-<tr>
+  <meta charset="utf-8">
 
-  <td><%= i.text_field :name,:placeholder=>"Username",:required=>true %></td>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</tr>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<tr>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-  <td><%= i.password_field :newpass,:placeholder=>"Password",:required=>true %></td>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-</tr>
+</head>
 
-<table align="center">
+<body>
 
-  <tr>
+<div style="width: 333px; margin-top: 82px;" class="container">
 
-   <td><%= i.submit "Login"%></td>
+ <center> <%= image_tag("/assets/logfo1.jpeg")%></center>
+   
+  <%=form_for [@admi],:url=>{:controller=>"products",:action=>"login_process"} do |i| %>
 
-<<<<<<< HEAD
-   <td><%= link_to "ForgotPassword?",products_forgot_path%></td>
-=======
-   <td><!--%= link_to "Create Account!",products_new_account_path%--></td>
->>>>>>> 6d2f4899fc872e93c63abe34e7775b8eff401381
+     <form role="form">
+  
+      <div class="form-group">
+ 
+      <%= i.text_field:email, :class=>"form-control",:placeholder=>"Enter email",:required=>"true",:autofocus=>"true"%>
+ 
+      </div>
 
-  </tr>
+      <div class="form-group">
 
+      <%= i.password_field:password, :class=>"form-control",:placeholder=>"Enter password",:required=>"true"%>
 
-  </center>
+      </div>
+
+      <center><button type="submit" class="btn btn-Danger">Submit</button></center>
+
+     </form>
+
+     </div>
 
   <%end%>
 
-</table>
-
-
-<div>
-
-<div id="index">
-
-         <!--img src="/assets/logo.jpeg"-->
 </div>
+
+</body>
+
+</html>
 
