--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,6 @@
 
 <br>
-<br>
-<br>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -10,12 +9,18 @@
 </head>
 <!--%=form_for[@product1], :url=>{:controller=>"products", :action=>"result_process"} do |i| %-->
 
-
+<!--%@tax1=@tax.maximum(:cat_name)%-->
+<%@taxo=$taxo.reverse%>
+<%@taxo.each do |i|%>
+<!--%@temp=i.maximum(:id)%-->
+<%=link_to i.maximum(:cat_name), product_path(i.maximum(:id))%>>
+<%end%>
+<hr>
 <% unless  @product1.is_a? Sku::ActiveRecord_Relation %>
 <div class="table-responsive">
 	<table class="table">
 		 <thead>
-      <tr class="success">
+      <tr bgcolor="#A5A7A8">
         <th>Categories</th></tr></thead>
 <%@product1.each do|i|%>
 <tbody><tr><td><%=link_to i.cat_name, product_path(i)%></td></tr></tbody>
@@ -23,21 +28,38 @@
 </table>
 </div>
 <%else%>
-<div class="table-responsive">
-	<table class="table">
-		 <thead>
-      <tr class="info">
-        <th>Item id</th><th>Product Name</th><th>Manufaturer Name</th></tr></thead>
+<div class="col-sm-8">
+		 
 <%@product1.each do|i|%>
+
 <%if @s!=i.i_id%>
-<tbody><tr><td><%=i.i_id%></td>
-<%@p=Sku.where(:i_id=>i.i_id)%>
-<td><%=@p.where(:name=> "Product Name").maximum(:value)%></td>
-<td><%=@p.where(:name=> "Manufacturer Name").maximum(:value)%></td></tr></tbody>
+<div class="col-sm-4">
+<div class="table-responsive">
+  <table class="table" style="width:70%; font-size:10px; line-height: 90%">
+    <%@p=Sku.where(:i_id=>i.i_id)%>
+<%@im=@p.where(:c_name=> "IMAGE").maximum(:value)%>
+
+<tbody><tr><td>
+  <%if @im.blank?%>
+  <img style="width:70%; height:100px;" src="/assets/not.jpeg" alt="Image not available">
+
+  <%else%>
+<%=image_tag @im, :height=>"100%", :width=>"100%" %>
+<%end%>
+</td><td><tr class="info"><td align="center"><%=link_to i.i_id, edit_product_path(i)%></td></tr>
+
+
+<tr><td align="center"><%=@p.where(:name=> "Product Name").maximum(:value)%></td></tr>
+<tr><td align="center"><%=@p.where(:name=> "Manufacturer Name").maximum(:value)%></td></tr></td></tr></tbody>
+
+</table>
+
+</div>
+</div>
 <%end%>
 <%@s=i.i_id%>
 <%end%>
-</table>
+
 </div>
 <%end%>
 
