--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -26,8 +26,13 @@ $(document).ready(function(){
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
-
-
+<br>
+&nbsp;&nbsp;
+<%@taxo=$taxo.reverse%>
+<%@taxo.each do |i|%>
+<!--%@temp=i.maximum(:id)%-->
+<b><I><%=link_to i.maximum(:cat_name), product_path(i.maximum(:id)), :style=>"color: black;"%></I></b><img src="/assets/arrow-34-xxl.png" style="height:10px">
+<%end%>
 
 <div class="container">
      
@@ -40,10 +45,10 @@ $(document).ready(function(){
 
 
 <div class="tab-content">
-    <div style="height: 100%; margin-top: 8px;" id="OverView" class="tab-pane fade in active">
+    <div style="height: 100%; margin-top: 100px;" id="OverView" class="tab-pane fade in active">
      <p>
-          <div class="pname">
-          <%=@sku3.where(:name=>"Product Name").maximum(:value)%>
+          <div class="pname"><b>
+          <%=@sku3.where(:name=>"Product Name").maximum(:value)%></b>
           </div>
 
       <div style="font-size: 100%; color:black; font-family: &quot;Times New Roman&quot;;position: absolute; width: 100%;" class="table- responsive ">                
@@ -72,26 +77,58 @@ $(document).ready(function(){
         </div>
 
 
-     <div style="font-size: 85%; margin-left:  &quot;35% &quot;font-family: &quot;Times New Roman&quot;;" class="table-responsive">          
+     <div style="font-size: 85%; width: 88%; margin-left:  &quot;35% &quot;font-family: &quot;Times New Roman&quot;;" class="table-responsive">          
         <table class="table">
         <tbody>
          <%@sku5.each do |i|%>
          <tr>
-         <td><%=i.value%>
-         <%=i.unit%></td>
+          <td>
+          <%unless i.name=="Feature Bullet"%>
+            <%=i.value%>
+            <%=i.unit%>
+          <%else%>
+           <%@sku7.each do|l|%>
+           <%=l%><br>
+          <%end%>
+          </td>
          </tr>
+         <%end%>
          <%end%>
          </tbody>
          </table>
+
+          <table class="table" style="margin-top: 125px;">
+            <tbody>
+                                      
+            <tr>
+              <th><b>ID</b></th>
+              <th><b>PRODUCT NAME</b></th>
+              <th><b>MANUFACTURE</b></th>
+            <%@cat.each do |i|%></tr>
+          <%next if i.i_id==@check%>
+         
+          <%@all=Sku.where(i_id:i.i_id)%>
+
+          <td style="width:2%"><%=link_to @all.maximum(:i_id),edit_product_path(@all.maximum(:id))%></td>
+           <td style="width:2%"><%=@all.where(name:"Product Name").maximum(:value)%></td>
+          <td style="width:10%;"><%=@all.where(c_name:"Attributes").maximum(:value)%></td>
+           <%end%>
+          </tr>
+          
+           <tbody>
+           </table>
+
+
+
        </div>
       </p>
   </div>
 
 
-<div  style="height: 100%; position: absolute; width: 100%; margin-top: 8px;" id="menu1" class="tab-pane fade">
+<div  style="height: 100%; position: absolute; width: 100%; margin-top: 100px;" id="menu1" class="tab-pane fade">
    <p>
        <div class="pname">
-          <%=@sku3.where(:name=>"Product Name").maximum(:value)%>
+          <b><%=@sku3.where(:name=>"Product Name").maximum(:value)%></b>
           </div>
 
           <div style="font-size: 100%; color:black; font-family: &quot;Times New Roman&quot;;position: absolute; width: 58%;" class="table- responsive ">                
@@ -123,10 +160,10 @@ $(document).ready(function(){
   </div>
  
 
- <div style="height: 100%; margin-top: 8px; width: 58%;" id="menu2" class="tab-pane fade">
+ <div style="height: 100%; margin-top: 100px; width: 58%;" id="menu2" class="tab-pane fade">
   <p>
           <div class="pname">
-          <%=@sku3.where(:name=>"Product Name").maximum(:value)%>
+          <b><%=@sku3.where(:name=>"Product Name").maximum(:value)%></b>
           </div>
 
           <div style="font-size: 100%; color:black; font-family: &quot;Times New Roman&quot;;position: absolute; width: 100%;" class="table- responsive ">                
@@ -150,13 +187,14 @@ $(document).ready(function(){
      <tr>
      <td><%=link_to i.value,i.value %></a></td>
      </tr>
-     <%end%>
+    <%end%>
      </tbody>
   </table>
   </div>
   </p>
 </div>
 </div>
+
 
  </body>
 </html>
